Add distributed tracing support with Micrometer and Zipkin across services